feat: add error response to exception handlers